fix page alignment in global css

--- a/src/index.css
+++ b/src/index.css
@@ -63,8 +63,10 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
+  justify-content: center;
   min-width: 320px;
   min-height: 100vh;
+  width: 100%;
 }
 
 h1 {
